--- a/kadai_mdn_css/kadai_mdn_css/mdn.html
+++ b/kadai_mdn_css/kadai_mdn_css/mdn.html
@@ -12,6 +12,11 @@
             height: 150px;
             background-color: skyblue;
         }
+
+        div:hover {
+  transition: rotate 1s;
+  rotate: 1 1 1 20deg;
+}
     </style>
 </head>
 
